--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,8 @@
+DB_HOST=mysql-293f2470-loginfaltu3-dd66.h.aivencloud.com
+DB_USER=avnadmin
+DB_PASSWORD=AVNS_I2kgrQL26paRNlbe-1u
+DB_NAME=defaultdb
+DB_PORT=20598
 PORT=3000
-MONGODB_URI=mongodb+srv://loginfaltu3:R1gteNJcnZo4UpAd@testnet.g72kt8q.mongodb.net/
-JWT_SECRET=your-super-secret-jwt-key
+JWT_SECRET=your_jwt_secret_key
 NODE_ENV=development 
