--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,24 @@
 {
   "name": "vehicle-tale-backend",
   "version": "1.0.0",
-  "description": "Backend for Vehicle Tale web application",
+  "type": "module",
+  "description": "Backend for Vehicle Tale application",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "jest"
+    "init-db": "node src/database/init.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@types/axios": "^0.9.36",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0",
-    "morgan": "^1.10.0"
+    "mysql2": "^3.9.2"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
-    "supertest": "^6.3.3"
+    "nodemon": "^3.1.0"
   }
 }
